# OptimExplorer

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/: CODEOWNERS
OptimExplorer/: CMakeLists.txt  main.cpp
OptimExplorer/core/: app.cpp  app.hpp  events.cpp  events.hpp  utils.hpp
OptimExplorer/torch/: networks.hpp  torch.cpp  torch.hpp
OptimExplorer/torch/networks/: mnist.hpp
OptimExplorer/widgets/: ideas  metrics.cpp  metrics.hpp  train.cpp  train.hpp  utils.cpp  utils.hpp  widget.hpp
